monticore-generator/src/test/resources/cocos/invalid/A4041/A4041.mc4
package cocos.invalid.A4041;

grammar A4041 {

  A = (A "*" A);

}